--- a/app/Resources/views/genre/show.html.twig
+++ b/app/Resources/views/genre/show.html.twig
@@ -28,6 +28,14 @@
                 <td>{{ genre.code }}</td>
             </tr>
             <tr>
+                <th>Ptac Min</th>
+                <td>{{ genre.ptacMin }}</td>
+            </tr>
+            <tr>
+                <th>Ptac Max</th>
+                <td>{{ genre.ptacMax }}</td>
+            </tr>
+            <tr>
                 <th>Créé par</th>
                 <td>{{ genre.creePar }}</td>
             </tr>
