--- a/app/Resources/views/vehicule/show.html.twig
+++ b/app/Resources/views/vehicule/show.html.twig
@@ -56,6 +56,14 @@
                 <td>{{ vehicule.couleur }}</td>
             </tr>
             <tr>
+                <th>TYPE</th>
+                <td>{{ vehicule.typeVehicule.libelle }}</td>
+            </tr>
+            <tr>
+                <th>PROPRIETAIRE</th>
+                <td>{{ vehicule.proprietaire }}</td>
+            </tr>
+            <tr>
                 <th>Créé par</th>
                 <td>{{ vehicule.creePar }}</td>
             </tr>
