--- a/app/Resources/views/parametres/menu.html.twig
+++ b/app/Resources/views/parametres/menu.html.twig
@@ -40,7 +40,7 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{{ path('admin_parametres_controle_index') }}">
-                    <i class="nav-icon icon-puzzle"></i> Contrôle</a>
+                    <i class="nav-icon icon-puzzle"></i> Point de contrôle</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{{ path('admin_parametres_codemaharesultat_index') }}">
