--- a/app/Resources/views/quittance/show.html.twig
+++ b/app/Resources/views/quittance/show.html.twig
@@ -6,7 +6,7 @@
 {% block ariane -%}
     <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
-          <li class="breadcrumb-item"><a href="{{ path('vehicule_index') }}">Caisse</a></li>
+          <li class="breadcrumb-item"><a href="{{ path('visite_quittance') }}">Quittance</a></li>
           <li class="breadcrumb-item">Détail de la Quittance</li>
     </ol>
 {% endblock %}
