--- a/web/css/style.css
+++ b/web/css/style.css
@@ -15197,3 +15197,23 @@ body {
 tfoot {
     display: table-header-group;
 }
+
+.contenu
+{
+ background-color:#FFFFFF;
+ border:1px solid #999999;
+ cursor:default;
+ display:none;
+ margin-top: 15px;
+ position:absolute;
+ text-align:left;
+ width:400px;
+ z-index:50;
+ padding: 25px 25px 20px;
+}
+
+a.selected {
+ background-color:#1F75CC;
+ color:white;
+ z-index:100;
+}
